--- a/opal/mca/common/sm/Makefile.am
+++ b/opal/mca/common/sm/Makefile.am
@@ -74,8 +74,8 @@ dist_opaldata_DATA = help-mpi-common-sm.txt
 
 lib_LTLIBRARIES =
 noinst_LTLIBRARIES =
-comp_inst = lib@OPAL_LIB_PREFIX@mca_common_sm.la
-comp_noinst = lib@OPAL_LIB_PREFIX@mca_common_sm_noinst.la
+comp_inst = lib@OPAL_LIB_NAME@mca_common_sm.la
+comp_noinst = lib@OPAL_LIB_NAME@mca_common_sm_noinst.la
 
 if MCA_BUILD_opal_common_sm_DSO
 lib_LTLIBRARIES += $(comp_inst)
@@ -83,11 +83,11 @@ else
 noinst_LTLIBRARIES += $(comp_noinst)
 endif
 
-lib@OPAL_LIB_PREFIX@mca_common_sm_la_SOURCES = \
+lib@OPAL_LIB_NAME@mca_common_sm_la_SOURCES = \
         $(headers) $(sources)
-lib@OPAL_LIB_PREFIX@mca_common_sm_la_LDFLAGS = \
+lib@OPAL_LIB_NAME@mca_common_sm_la_LDFLAGS = \
         -version-info $(libmca_opal_common_sm_so_version)
-lib@OPAL_LIB_PREFIX@mca_common_sm_noinst_la_SOURCES = \
+lib@OPAL_LIB_NAME@mca_common_sm_noinst_la_SOURCES = \
         $(headers) $(sources)
 
 # Conditionally install the header files
